--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -291,6 +291,8 @@ button:hover {
     width: 50px;
     height: 50px;
   }
+}
+@media (max-width: 438px) {
   .ticket-details {
     padding-left: 2rem;
   }
@@ -303,7 +305,7 @@ button:hover {
 @media (max-width: 420px) {
   .ticket-details {
     background-size: 300px 200px;
-    padding-left: 1rem;
+    padding-left: 2rem;
   }
   #previewImage {
     width: 40px;
